--- a/app/src/main/res/layout/car_park_details.xml
+++ b/app/src/main/res/layout/car_park_details.xml
@@ -5,14 +5,32 @@
     android:padding="20sp"
     android:orientation="vertical">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="header"
-        android:id="@+id/details_title"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        android:textColor="#DE000000"/>
+        android:padding="5dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/details_title"
+            android:textSize="28sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/details_status"
+            android:textColor="@color/colorAccent"
+            android:paddingLeft="20dp"
+            android:textStyle="bold"
+            android:textSize="26sp"
+            android:layout_below="@id/details_title"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,6 +44,8 @@
             android:id="@+id/address"
             android:padding="10dp"
             android:textSize="16sp"/>-->
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,22 +61,14 @@
             android:padding="10dp"
             android:textSize="24sp" />
 
-        <TextView
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/details_status"
-            android:padding="10dp"
-            android:textStyle="bold"
-            android:textSize="24sp" />
+            android:layout_height="match_parent"
+            android:id="@+id/Day_Table"
+            android:padding="10dp"/>
     </LinearLayout>
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/Day_Table">
 
-
-    </TableLayout>
 
 
 </LinearLayout>
