--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -18,8 +18,8 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
 
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/CustomTheme">
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:theme="@style/CustomTheme">
 
             <RelativeLayout
                 android:layout_width="match_parent"
