--- a/app/src/main/res/layout/car_park_details.xml
+++ b/app/src/main/res/layout/car_park_details.xml
@@ -1,49 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20sp"
     android:orientation="vertical">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_centerHorizontal="true"
             android:id="@+id/details_title"
-            android:textSize="28sp"
-            android:textStyle="bold"/>
+            android:textSize="27sp"
+            android:textStyle="bold"
+            android:alpha="0.87"
+            android:textColor="#000000"
+            android:paddingBottom="20dp"
+            android:textAlignment="center"/>
+
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/details_status"
-            android:textColor="@color/colorAccent"
-            android:paddingLeft="20dp"
-            android:textStyle="bold"
-            android:textSize="26sp"
-            android:layout_below="@id/details_title"
-            android:textAlignment="center"
-            android:layout_centerHorizontal="true"/>
-    </RelativeLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:orientation="vertical">
-
-        <!--<TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/address"
             android:padding="10dp"
-            android:textSize="16sp"/>-->
+            android:textSize="20sp"
+            android:alpha="0.87"
+            android:textColor="#000000"
+            android:textStyle="bold" />
 
 
         <TextView
@@ -51,24 +36,38 @@
             android:layout_height="wrap_content"
             android:id="@+id/details_free_spaces"
             android:padding="10dp"
+            android:alpha="0.87"
+            android:textColor="#000000"
             android:textStyle="bold"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/details_spaces"
+            android:alpha="0.87"
+            android:textColor="#000000"
             android:padding="10dp"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/Day_Table"
-            android:padding="10dp"/>
+            android:padding="10dp"
+            android:stretchColumns="*"
+            android:showDividers="middle">
+        </TableLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/details_status"
+            android:textColor="@color/colorAccent"
+            android:padding="10dp"
+            android:textStyle="bold"
+            android:textSize="28sp"
+            android:textAlignment="center"
+            android:background="#EEEEEE"/>
     </LinearLayout>
-
-
-
-
-</LinearLayout>
+</ScrollView>
