--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -26,13 +26,13 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/toolbar_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="16dp"
                     android:paddingTop="16dp"
                     android:text="@string/app_name"
-                    android:id="@+id/toolbar_title"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/place_autocomplete_separator"
                     android:textSize="20sp"
                     android:typeface="serif" />
             </RelativeLayout>
