--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="place_autocomplete_search_text">#FFFFFF</color>
+    <color name="place_autocomplete_search_hint">#FFFFFF</color>
+    <color name="place_autocomplete_prediction_secondary_text">#FFFFFF</color>
+    <color name="place_autocomplete_prediction_primary_text">#FFFFFF</color>
+    <color name="place_autocomplete_prediction_primary_text_highlight">#FFFFFF</color>
+    <color name="place_autocomplete_separator">#FFFFFF</color>
 </resources>
