--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,11 +5,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColor">#000000</item> 
+        <item name="android:textColor">#000000</item>
     </style>
 
     <style name="CustomTheme" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:textColorPrimary">#E0F2F1</item>
+        <item name="android:textColorPrimary">@color/colorAccent</item>
         <item name="android:textColorSecondary">#FFFF00</item>
         <item name="android:textSize">15sp</item>
     </style>
